[GStreamer][WebRTC] Handle broken data in the libwebrtc GStreamer decoders https://bugs.webkit.org/show_bug.cgi?id=200584

Patch by Thibault Saunier <tsaunier@igalia.com> on 2019-08-12
Reviewed by Philippe Normand.

Source/WebCore:

Listening to parsers warnings and error messages (synchronously so that we react
right away) and requesting keyframes from the peer.

Also simplify the decoder code by trying to make decoding happen
in one single pass, also hiding away GStreamer threading and allowing
us to react as soon as the decoder/parser fails.

* platform/mediastream/libwebrtc/GStreamerVideoDecoderFactory.cpp:
(WebCore::GStreamerVideoDecoder::GStreamerVideoDecoder):
(WebCore::GStreamerVideoDecoder::pullSample):
(WebCore::H264Decoder::H264Decoder):
* platform/mediastream/libwebrtc/GStreamerVideoEncoderFactory.cpp:

Tools:

Added a h264parse patch to post WARNING on the bus when a broken frame is detected.
Ignore style libwebrtc optionnal 'style issue'

* Scripts/webkitpy/style/checker.py:
* gstreamer/jhbuild.modules:
* gstreamer/patches/gst-plugins-bad-0001-h264parse-Post-a-WARNING-when-data-is-broken.patch: Added.

Canonical link: https://commits.webkit.org/214382@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248530 268f45cc-cd09-0410-ab3c-d52691b4dbfc